@@ -176,6 +176,7 @@ Chronological list of authors
   - Yantong Cai
   - Bjarne Feddersen
   - Pratik Gupta
+  - Alexander Gorfer
 
 External code
 -------------
