@@ -1,0 +1,34 @@
+LAMMPS triclinic data file
+
+17 atoms
+
+1 atom types
+
+-0.32115478301032807 16.831069399898624 xlo xhi
+-0.12372358703610897 25.95896427399614 ylo yhi
+-0.045447071698045266 12.993982724334792 zlo zhi
+1.506743915478767 -6.266414551929444 -0.42179319547892025 xy xz yz
+
+Masses
+
+1 26.9815
+
+Atoms # atomic
+
+192 1 2.939929226745528 0.28126611328982504 0.509212291451447 0 0 0
+85  1 0.2851050832641419 3.0807154102734917 4.6247763608193155 0 0 0
+295 1 -0.8077822604729055 3.9571902907303733 3.9345748176468693 0 0 0
+300 1 1.8093279024899684 3.3208268390257514 4.215038876613601 0 0 0
+188 1 5.449513973050337 0.4263205981754459 1.587561248258666 0 0 0
+191 1 3.999161625604918 5.667029705285251 1.8280363439039549 0 0 0
+299 1 -0.12308953374879046 1.5325054443344792 4.1337384269477715 0 0 0
+159 1 1.4500667066314719 1.1149430067523804 2.391995904640104 1 0 1
+136 1 6.6253293198545045 2.5456109021590163 2.847256975857115 0 0 0
+146 1 5.493605209601826 0.261491883863461 4.532083302884116 0 0 0
+193 1 3.5376239452534324 3.671398031996834 -0.02020726596457809 0 0 0
+81  1 -1.0940910841830676 5.6783700063066815 3.9223430559877266 0 0 0
+189 1 5.995616400934193 4.020967239135711 0.7068582903868794 0 0 0
+43  1 6.847965492945945 0.4349078018589978 0.7454921986075675 0 0 0
+304 1 4.380319548944577 2.5314626579385897 5.491572411560825 0 0 0
+86  1 -0.009824994256196633 0.1211322463682511 5.194921290704171 0 0 0
+302 1 3.8457424411075216 5.270216285190885 4.93718329708941 0 0 0
