@@ -1,0 +1,26 @@
+ITEM: TIMESTEP
+0
+ITEM: NUMBER OF ATOMS
+17
+ITEM: BOX BOUNDS xy xz yz pp pp pp
+-6.5875693349397721e+00 1.8337813315377392e+01 1.5067439154787670e+00
+-5.4551678251502922e-01 2.5958964273996141e+01 -6.2664145519294436e+00
+-4.5447071698045266e-02 1.2993982724334792e+01 -4.2179319547892025e-01
+ITEM: ATOMS id type xs ys zs
+192 1 0.204242 0.016215 0.0425371
+85 1 0.154896 0.128649 0.358162
+295 1 0.068964 0.161397 0.30523
+300 1 0.231516 0.137347 0.326739
+188 1 0.380162 0.0231137 0.125236
+191 1 0.284665 0.224339 0.143678
+299 1 0.122607 0.0686822 0.320504
+159 1 0.16712 0.0505129 0.186929
+136 1 0.476733 0.105929 0.221843
+146 1 0.465467 0.020446 0.351053
+193 1 0.212895 0.145535 0.00193565
+81 1 0.0461335 0.227371 0.304292
+189 1 0.375314 0.159839 0.0576947
+43 1 0.438163 0.0223986 0.0606575
+304 1 0.419694 0.108666 0.424637
+86 1 0.163581 0.0158867 0.401886
+302 1 0.363831 0.212981 0.38212
